--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,8 +7,8 @@ import Pizzeria from "./snippets/Pizzeria.astro";
 
 <footer id="footer">
   <div class="grid container">
-    <Reservation visible />
     <Address instagram />
+    <Reservation />
     <Pizzeria />
   </div>
 </footer>
