--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -9,6 +9,7 @@ import About from "../../components/About.astro";
 import DailyMenu from "../../components/DailyMenu.astro";
 import Menu from "../../components/Menu.astro";
 import Footer from "../../components/Footer.astro";
+import Review from "../../components/Review.astro";
 
 changeLanguage("en");
 ---
@@ -18,10 +19,13 @@ changeLanguage("en");
 	<body>
 		<Header />
 		<Hero />
-		<DailyMenu />
 		<About />
 		<Menu />
+		<DailyMenu />
+		<Review />
 		<Footer />
-		<script src="../assets/js/global.js"></script>
+		<script> 
+			import "../../assets/js/global.js"
+		</script>
 	</body>
 </html>
