--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,8 +1,7 @@
 ---
 import img1 from "../assets/img/body/20221027vezenska_piatti_12.jpg"
-import img2 from "../assets/img/body/20221027vezenska_piatti_3.jpg"
-import img3 from "../assets/img/hero/unused/invitaly_vezenska_16.jpg"
-import img4 from "../assets/img/body/INV2-217_064.jpg"
+import img2 from "../assets/img/body/INV2-217_004.jpg"
+import img3 from "../assets/img/body/INV2-217_063.jpg"
 ---
 
 <section class="grid container" id="about">
@@ -12,8 +11,8 @@ import img4 from "../assets/img/body/INV2-217_064.jpg"
     <p>Cum facere tempora dolor nam! Dicta non suscipit cumque rerum maiores ipsa accusantium esse error, soluta pariatur cum repudiandae at magni ducimus aliquam temporibus repellendus minima ex fugit, neque tempora.</p>
   </div>
   <div class="img1 toRight observe"><img src={img1} alt="Invitaly"></div>
-  <div class="img2 zoom observe"><img src={img4} alt="Invitaly"></div>
-  <div class="img3 zoom observe"><img src={img2} alt="Invitaly"></div>
+  <div class="img2 zoom observe"><img src={img2} alt="Invitaly"></div>
+  <div class="img3 zoom observe"><img src={img3} alt="Invitaly"></div>
 </section>
 
 <style>
@@ -22,6 +21,7 @@ import img4 from "../assets/img/body/INV2-217_064.jpg"
   }
   h2 {
     padding-top: var(--gutter-l);
+    margin-bottom: 0;
   }
   
   /* animations */
@@ -37,6 +37,12 @@ import img4 from "../assets/img/body/INV2-217_064.jpg"
     .img1, .img2, .img3 {
       width: 100%;
       height: 100%;
+
+      & img {
+        object-fit: cover;
+        height: 100%;
+        width: 100%;
+      }
     } 
     .img1 {
       grid-column: 6 / 13;
@@ -46,10 +52,6 @@ import img4 from "../assets/img/body/INV2-217_064.jpg"
       grid-column: 1 / 6;
       grid-row: 3 / 4;
 
-      & img {
-        object-fit: cover;
-        height: 100%;
-      }
     }
     .img3 {
       grid-column: 1 / 13;
