--- a/src/components/snippets/Reservation.astro
+++ b/src/components/snippets/Reservation.astro
@@ -1,39 +1,38 @@
 ---
 import { t } from "i18next";
 
-import wolt from '../assets/img/branding/wolt.png';
-import iconInstagram from '../../assets/img/icon/instagram--color.svg';
+import iconWolt from '../../assets/img/branding/wolt.png';
+import iconInstagram from '../../assets/img/icon/instagram.svg';
 
 interface Props {
   phone?: string;
   email?: string;
-  wolt?: string;
   hours?: string;
-  visible?: boolean;
+  wolt?: boolean;
   instagram?: boolean;
 }
-const { phone = "+420 222 313 185", email = "enotrattoria@invitaly.cz", hours = "11:00 - 22:00", visible=false, instagram=false } = Astro.props;
+const { phone = "+420 222 313 185", email = "enotrattoria@invitaly.cz", hours = "11:00 - 22:00", wolt = false, instagram = false } = Astro.props;
 ---
   <section>
-    { visible && <h3 class="small">{t("footer.reservation")}:</h3> }
-    { visible && <ul style="margin-bottom: var(--gutter);">
+    <h3 class="small">{t("footer.reservation")}:</h3>
+    <ul style="margin-bottom: var(--gutter);">
       <li><span>{t("footer.call")}: </span> <a href="tel:+420222313185" target="_blank">{phone}</a>
       </li>
       <li><span>Email: </span><a href={`mailto:${email}`} target="_blank">{email}</a>
       </li>
-      <!-- <li>
+      { wolt && <li>
         {t("footer.order")}: <a href="https://wolt.com/en/cze/prague/restaurant/invitaly" target="_blank" rel="nofollow">
-          <img src={wolt} width="55px" height="20px" style="margin: -0.4rem 0 0 1rem;" alt="Order Invitaly">
+          <img src={iconWolt} width="55px" height="20px" style="margin: -0.4rem 0 0 1rem;" alt="Order Invitaly">
         </a>
-      </li> -->
-    </ul> }
+      </li> }
+    </ul>
     <h3 class="small">{t("footer.openingHours")}:</h3>
     <div class="opening-hours">
       <p>{t("footer.daysOpen")}:<br>{t("footer.daysClosed")}:</p>
       <p>{hours}<br>{t("footer.closed")}</p>
     </div>
     { instagram && <a href="https://www.instagram.com/invitaly_enotrattoria/" target="_blank" class="social-link">
-      <img src={iconInstagram} alt="Invitaly instagram" width="28" height="28"> {t("footer.instaCaption")}
+      <img src={iconInstagram} alt="Invitaly instagram" width="28" height="28">
     </a> }
   </section>
 
