Menu name change

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -6,7 +6,7 @@ import Arrow from "./snippets/Arrow.astro";
 interface Props {
   menuUrl?: string;
 }
-const { menuUrl = "https://invitaly.cz/files/menu_vezenska.pdf" } = Astro.props;
+const { menuUrl = "https://invitaly.cz/files/menu_enotrattoria.pdf" } = Astro.props;
 ---
 
 <section class="container" id="menu">
