GTM install with Partytown

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,6 +1,7 @@
 ---
 import { t } from "i18next";
 import { HeadHrefLangs } from "astro-i18next/components";
+import TagManager from "./snippets/TagManager.astro";
 
 import appleTouchIcon from '../assets/img/favicon/apple-touch-icon.png'
 import favicon32 from '../assets/img/favicon/favicon-32x32.png'
@@ -35,4 +36,5 @@ import favicon16 from '../assets/img/favicon/favicon-16x16.png'
       type="text/css"
     />
   </noscript>
+  <TagManager />
 </head>
