--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,6 +8,10 @@ import MobileNav from "./snippets/MobileNav.astro";
 const { pathname } = Astro.url;
 
 ---
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5P5SR4D"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <header>
   <div class="container">
