--- a/src/components/Review.astro
+++ b/src/components/Review.astro
@@ -5,7 +5,7 @@ import imgReview from "../assets/img/body/INV2-217_021.jpg"
 ---
 
 <section>
-    <figure class="header">
+    <figure class="header container">
       <h2 class="fadeUp observe">Breathtaking experience</h2>
       <q>Excellent, unassuming and wonderful find. Great variety and fine value tasting menu. Exciting food with high quality presentation, service and inventiveness.</q>
       <figcaption>—Aldous Huxley, Source</figcaption>
