--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -4,9 +4,8 @@ import "../../assets/css/global.css";
 import i18next, { changeLanguage } from "i18next";
 import Head from "../../components/Head.astro";
 import Header from "../../components/Header.astro";
-import Hero from "../../components/Hero.astro";
+import HeroVideo from "../../components/HeroVideo.astro";
 import About from "../../components/About.astro";
-import DailyMenu from "../../components/DailyMenu.astro";
 import Menu from "../../components/Menu.astro";
 import Footer from "../../components/Footer.astro";
 import Review from "../../components/Review.astro";
@@ -18,10 +17,9 @@ changeLanguage("en");
 	<Head />
 	<body>
 		<Header />
-		<Hero />
+		<HeroVideo />
 		<About />
 		<Menu />
-		<DailyMenu />
 		<Review />
 		<Footer />
 		<script> 
