Add tracking IDs

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -10,7 +10,7 @@ const { menuUrl = "https://invitaly.cz/files/menu_enotrattoria.pdf" } = Astro.pr
 ---
 
 <section class="container" id="menu">
-  <a href={menuUrl} target="_blank">
+  <a href={menuUrl} target="_blank" id="menuDownload">
     <div>
       <h2>Our Menu</h2>
       <p>Sit tempora minus asperiores blanditiis autem non beatae incidunt, est nobis aperiam neque alias, esse earum eaque consectetur corrupti numquam odit officia.</p>
