--- a/src/components/snippets/Pizzeria.astro
+++ b/src/components/snippets/Pizzeria.astro
@@ -6,7 +6,7 @@ const pizzeriaPhoto = 'https://pizza.invitaly.cz/assets/img/food/140422/21-03Inv
 <section class="pizzeria">
   <h3 class="small">Invitaly Piazzetta</h3>
   <p>Visit our pizzera to taste delicious Italian pizzas.</p>
-  <a href="https://pizza.invitaly.cz">
+  <a href="https://pizza.invitaly.cz" id="pizzeriaClick">
     <div class="link">
       <p>Go to pizzeria</p>
       <Arrow small />
