--- a/src/components/DailyMenu.astro
+++ b/src/components/DailyMenu.astro
@@ -1,5 +1,5 @@
 <section class="container">
-	<h3 id="daily-menu-header">Business lunch menu</h3>
+	<h3 id="daily-menu-header">Business Lunch Menu</h3>
 	<i>12:00 - 15:00</i>
 	<ul id="daily-menu">
 		<li class="first-course">First Course</li>
@@ -63,6 +63,9 @@
 		}
 		#daily-menu {
 			margin: 0 auto;
+		}
+		li[class] {
+			margin-bottom: 0.5rem;
 		}
 	}
 
