--- a/src/components/Review.astro
+++ b/src/components/Review.astro
@@ -1,14 +1,14 @@
 ---
 import { t } from "i18next";
 
-import imgReview from "../assets/img/body/INV2-217_021.jpg"
+import imgReview from "@assets/img/body/INV2-217_021.jpg"
 ---
 
 <section>
     <figure class="header container">
-      <h2 class="fadeUp observe">Breathtaking experience</h2>
-      <q>Excellent, unassuming and wonderful find. Great variety and fine value tasting menu. Exciting food with high quality presentation, service and inventiveness.</q>
-      <figcaption>—Aldous Huxley, Source</figcaption>
+      <h2 class="fadeUp observe">{t("review.header")}</h2>
+      <q>{t("review.q")}</q>
+      <figcaption>{t("review.caption")}</figcaption>
     </figure>
   <div class="toLeft observe">
     <img src={imgReview} width= "1500" height="800" alt="Invitaly EnoTrattoria">
