--- a/src/components/snippets/LanguageSelector.astro
+++ b/src/components/snippets/LanguageSelector.astro
@@ -28,6 +28,7 @@ const currentUrl = Astro.url.href;
   a {
     text-transform: uppercase;
     font-weight: 600;
+    font-size: clamp(0.9rem, 2vw, 1rem);
     z-index: 1;
   }
 </style>
