--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -47,7 +47,7 @@ const {
     text-align: center;
     max-width: 50rem;
     padding: var(--gutter-l);
-    margin: var(--gutter) auto var(--gutter-xl);
+    margin: var(--gutter) auto var(--gutter-l);
   }
   
   @media (width < 769px) {
