--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,6 +1,8 @@
 ---
-import img2 from "../assets/img/body/INV2-217_065.jpg"
-import img3 from "../assets/img/body/INV2-217_051.jpg"
+import { t } from "i18next";
+
+import img2 from "@assets/img/body/INV2-217_065.jpg"
+import img3 from "@assets/img/body/INV2-217_051.jpg"
 import Arrow from "./snippets/Arrow.astro";
 import DailyMenu from "./DailyMenu.astro";
 
@@ -13,15 +15,14 @@ const { menuUrl = "https://invitaly.cz/files/menu_enotrattoria.pdf" } = Astro.pr
 <section class="container" id="menu">
   <a href={menuUrl} target="_blank" id="menuDownload">
     <div>
-      <h2>Our Menu</h2>
-      <p>Sit tempora minus asperiores blanditiis autem non beatae incidunt, est nobis aperiam neque alias, esse earum eaque consectetur corrupti numquam odit officia.</p>
+      <h2>{t("menu.header")}</h2>
+      <p>{t("menu.p")}</p>
     </div>
-    <Arrow />
+    <Arrow buttonText={t("menu.buttonText")} />
   </a>
   <div class="gallery">
     <div class="zoom observe">
       <img src={img2} alt="" width="1100" height="400">
-      <!-- <img src="https://images.unsplash.com/photo-1550966871-3ed3cdb5ed0c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=900&h=400&q=80" alt=""> -->
     </div>
     <div class="zoom observe">
       <img src={img3} alt="" width="300" height="400">
