--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,15 @@
 ---
-import "../assets/css/reset.css";
-import "../assets/css/global.css";
+import "@assets/css/reset.css";
+import "@assets/css/global.css";
 
 import i18next, { changeLanguage } from "i18next";
-import Head from "../components/Head.astro";
-import Header from "../components/Header.astro";
-import HeroVideo from "../components/HeroVideo.astro";
-import About from "../components/About.astro";
-import Menu from "../components/Menu.astro";
-import Footer from "../components/Footer.astro";
-import Review from "../components/Review.astro";
+import Head from "@components/Head.astro";
+import Header from "@components/Header.astro";
+import HeroVideo from "@components/HeroVideo.astro";
+import About from "@components/About.astro";
+import Menu from "@components/Menu.astro";
+import Footer from "@components/Footer.astro";
+import Review from "@components/Review.astro";
 
 changeLanguage("cs");
 ---
@@ -24,7 +24,7 @@ changeLanguage("cs");
 		<Review />
 		<Footer />
 		<script> 
-			import "../assets/js/global.js"
+			import "@assets/js/global.js"
 		</script>
 	</body>
 </html>
